# hardware-observer-operator

./: .codespell-ignore-words.txt  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  README.md  SECURITY.md  SETENV.md  TESTING.md  charmcraft.yaml  config.yaml  dev-environment.md  empty-resource  metadata.yaml  pyproject.toml  rename.sh  requirements-dev.txt  requirements.txt  sonar-project.properties  tox-weekly-test.ini  tox.ini
.github/: .jira_sync_config.yaml  CODEOWNERS
.github/workflows/: check.yaml  cos_integration.yaml  issues_to_jira.yaml  pr.yaml  promote.yaml  release.yaml  sonar.yaml  test_prometheus_rules.yaml  testflinger.yaml  tics.yaml
docs/: resources.md
docs/explanation/: strategy-pattern-in-hardware-observer.md
lib/charms/grafana_agent/v0/: cos_agent.py
src/: apt_helpers.py  charm.py  check_sum.py  checksum.py  config.py  cos_agent.py  exporter.py  exporter_helpers.py  hardware.py  hw_resources.py  hw_tools.py  keys.py  literals.py  os_platform.py  service.py  ssdlc.py  storelib_conf.template  vendor.py
src/dashboards_dcgm/: GPU.json
src/dashboards_hardware_exporter/: BMC.json
src/dashboards_smart_ctl/: smart.json
src/gpu_metrics/: dcgm_metrics.csv
src/grafana_dashboards/: BMC.json  GPU.json  smart.json
src/prometheus_alert_rules/: DCGM.yaml  dcgm.yaml  general.yaml  ipmi_dcmi.yaml  ipmi_sel.yaml  ipmi_sensors.yaml  lsi_sas.yaml  lsi_sas_2.yaml  lsi_sas_3.yaml  mega_raid.yaml  perccli.yaml  redfish.yaml  smart.yaml  ssacli.yaml
src/prometheus_alert_rules_dynamic/: redfish.yaml
src/templates/: hardware-exporter.service.j2
templates/: hardware-exporter-config.yaml.j2  smartctl-exporter.service.j2
tests/functional/: README.md  bundle.yaml.j2  conftest.py  requirements.txt  test_charm.py  utils.py
tests/integration/: conftest.py  export_mock_metrics.py  mock_data.py  requirements.txt  test_cos_integration.py  utils.py
tests/manual/: README.md
tests/manual/cos/: main.tf  terragrunt.hcl
tests/manual/etc/1_add_machine/: main.tf  outputs.tf  terragrunt.hcl  variables.tf
tests/manual/grafana_agent/: main.tf  outputs.tf  terragrunt.hcl
tests/manual/jobs/: README.md  submit.sh
tests/manual/k8s_cloud/: outputs.tf  terragrunt.hcl
tests/manual/machine/: main.tf  outputs.tf  terragrunt.hcl
tests/manual/scripts/: bootstrap.sh  cleanup.sh  get-kubeconfig.sh  get-local-ip.sh  get-preferred-ip.sh  wait-for-application.sh  wait-for-cos-destroyed.sh  wait-for-cos.sh  wait-for-grafana-agent.sh  wait-for-microk8s.sh  wait-for-model-destroyed.sh  wait-for-model.sh  wait-for-ubuntu.sh
tests/unit/: test_apt_helpers.py  test_charm.py  test_check_sum.py  test_checksum.py  test_exporter.py  test_hardware.py  test_hw_tools.py  test_literals.py  test_os_platform.py  test_service.py  test_ssdlc.py  test_vendor.py
tests/unit/test_alert_rules/: test_DCGM.yaml  test_dcgm.yaml  test_general.yaml  test_ipmi_dcmi.yaml  test_ipmi_sel.yaml  test_ipmi_sensors.yaml  test_lsi_sas.yaml  test_lsi_sas_2.yaml  test_lsi_sas_3.yaml  test_mega_raid.yaml  test_perccli.yaml  test_redfish.yaml  test_smart.yaml  test_ssacli.yaml
(+26 files in other folders)
