[project]
name = "hardware-observer-operator"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "cosl",
    "distro",
    "ops>=2.2.0",
    "jinja2",
    "redfish",
    "pydantic<2",
    "prometheus-hardware-exporter",
]

[tool.uv]
package = false

[tool.uv.sources]
prometheus-hardware-exporter = {git = "https://github.com/canonical/prometheus-hardware-exporter.git", tag = "v1.2.1"}

[dependency-groups]
reformat = [
    "ruff",
]
lint = [
    "mypy",
    "ruff",
    "codespell",
    "types-requests>=2.32.0.20241016",
]
unit = [
    "coverage",
    "parameterized",
    "pytest",
    "pytest-cov",
]
func = [
    "pytest",
    "pytest-cov",
    "pytest-operator",
    "async-lru",
    "protobuf",
    "tenacity",
]
integration = [
    "juju~=3.5.0",
    "pytest",
    "pytest-operator",
    "prometheus-client",
    "pyinstaller",
    "tenacity",
]
tics = [
    "coverage[toml]",
]

[tool.ruff]
line-length = 99
exclude = [
    ".git",
    "__pycache__",
    ".tox",
    ".build",
    "build",
    "dist",
    ".eggs",
    "*.egg_info",
    "venv",
    ".venv",
    "report",
    "docs",
    "lib",
    "mod",
    "hooks/charmhelpers",
    "tests/charmhelpers",
]

[tool.ruff.lint]
select = ["E", "W", "F", "C90", "N", "D", "I", "CPY"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "D107",   # missing docstring in __init__
    "D203",   # one-blank-line-before-class (incompatible with D211)
    "D213",   # multi-line-summary-second-line (incompatible with D212)
    "D415",   # first line should end with punctuation
    "D100",   # missing docstring in public module
    "D101",   # missing docstring in public class
    "D102",   # missing docstring in public method
    "D103",   # missing docstring in public function
    "N818",   # exception name should end with Error
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-doc-length = 99

[tool.ruff.lint.flake8-copyright]
notice-rgx = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+Canonical Ltd\\."
min-file-size = 1

[tool.mypy]
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_namespace_packages = true
exclude = ['.eggs', '.git', '.tox', '.venv', '.build', 'lib', 'report', 'tests', 'docs', "mod", "hooks/charmhelpers", "tests/charmhelpers"]

[tool.codespell]
skip = ".eggs,.tox,.git,.venv,venv,build,.build,lib,report,docs,htmlcov,mod,hooks/charmhelpers,tests/charmhelpers,uv.lock"
quiet-level = 3
check-filenames = true
ignore-words-list = "assertIn"

[tool.coverage.run]
relative_files = true
source = ["."]
omit = ["tests/**", "docs/**", "lib/**", "snap/**", "build/**", "setup.py", "mod/**", "hooks/charmhelpers/**", "tests/charmhelpers/**"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.html]
directory = "tests/report/html"

[tool.coverage.xml]
output = "tests/report/coverage.xml"
